--- a/Application-Challenge/项目78-虎虎生威队-塔吊大师/MyAgora/app/src/main/res/values/strings.xml
+++ b/Application-Challenge/项目78-虎虎生威队-塔吊大师/MyAgora/app/src/main/res/values/strings.xml
@@ -25,6 +25,8 @@
     <string name="input_password">请输入密码</string>
     <string name="login">登录</string>
     <string name="register">注册</string>
+    <string name="register_success">注册成功，请登录</string>
+    <string name="register_failure">注册失败</string>
     <string name="register_account">注册账号</string>
     <string name="please_input_account">请输入账号</string>
     <string name="please_input_password">请输入密码</string>
